--- a/sample_cmake/helloworld/helloworld_test/CMakeLists.txt
+++ b/sample_cmake/helloworld/helloworld_test/CMakeLists.txt
@@ -25,6 +25,7 @@ target_link_libraries(
   ${PROJECT_NAME}
   PRIVATE
   lib::hello
+  _helloworld
   GTest::gtest
   GTest::gtest_main
   GTest::gmock
