--- a/sample_cmake/libhello/src/CMakeLists.txt
+++ b/sample_cmake/libhello/src/CMakeLists.txt
@@ -34,15 +34,19 @@ target_include_directories(${PROJECT_NAME}
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
 #-------------------------
+set(CMAKE_INSTALL_PREFIX "C:/install")
+#set(CMAKE_PREFIX_PATH "C:/install")
+
+
 set(EXPORT_NAME ${PROJECT_NAME}-config)
 install(
-	TARGETS         ${PROJECT_NAME}
-	EXPORT          	${EXPORT_NAME}
-#	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include
-	INCLUDES	DESTINATION ${CMAKE_INSTALL_PREFIX}/include
-    RUNTIME 	DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
-    LIBRARY 	DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-    ARCHIVE		DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+	TARGETS						${PROJECT_NAME}
+	EXPORT						${EXPORT_NAME}
+	PUBLIC_HEADER	DESTINATION	${CMAKE_INSTALL_PREFIX}/include
+	INCLUDES		DESTINATION	${CMAKE_INSTALL_PREFIX}/include
+    RUNTIME 		DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
+    LIBRARY 		DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+    ARCHIVE			DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
 )
 
 install(
@@ -64,3 +68,4 @@ install(
 	FILES           ${VERSION_FILE_PATH} 
 	DESTINATION     ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}
 )
+
