--- a/sample_cmake/helloworld/helloworld/CMakeLists.txt
+++ b/sample_cmake/helloworld/helloworld/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14.2)
 
 project(
-	_helloworld
+	lib_helloworld
 	VERSION 1.0.0
 	LANGUAGES CXX
 )
@@ -10,10 +10,12 @@ file(GLOB_RECURSE public **.hpp)
 file(GLOB_RECURSE private **.cpp)
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${public} ${private})
 
+
 add_library(${PROJECT_NAME} STATIC
     ${public}
     ${private}
 )
+set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 #add_library(lib::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 target_compile_options(${PROJECT_NAME} PRIVATE /WX /Wall /utf-8)
