--- a/cmake/sample_cmake/helloworld/helloworld_exe/CMakeLists.txt
+++ b/cmake/sample_cmake/helloworld/helloworld_exe/CMakeLists.txt
@@ -1,21 +1,17 @@
-project(helloworld
-	VERSION 1.0.0
-	LANGUAGES CXX)
+project(helloworld VERSION 1.0.0 LANGUAGES CXX)
 
 file(GLOB_RECURSE public **.hpp)
 file(GLOB_RECURSE private **.cpp)
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${public} ${private})
 
-add_executable(${PROJECT_NAME}
-    ${public}
-    ${private}
-)
-
-target_compile_options(${PROJECT_NAME} PRIVATE /WX /Wall /utf-8)
-
-target_compile_features(${PROJECT_NAME}	PRIVATE cxx_std_17)
+add_executable(${PROJECT_NAME} ${public} ${private})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
+target_compile_features(${PROJECT_NAME}	PRIVATE cxx_std_17)
+target_compile_options(${PROJECT_NAME} PRIVATE /WX /Wall /utf-8)
+
+
+
 
 set(CMAKE_INSTALL_PREFIX "C:/install")
 set(CMAKE_PREFIX_PATH "C:/install")
