--- a/cmake/sample_cmake/libhello/CMakeLists.txt
+++ b/cmake/sample_cmake/libhello/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required(VERSION 3.14.2)
 project(libhello)
 
 set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE FILEPATH "")
-enable_testing()
 
-add_subdirectory(src)
-add_subdirectory(test)
+option(BUILD_INSTALL	"Install header and library"	ON)
+option(BUILD_TEST		"Build own tests."				ON)
+
+add_subdirectory(hello)
+add_subdirectory(hello_test)
