--- a/cmake/sample_cmake/helloworld/CMakeLists.txt
+++ b/cmake/sample_cmake/helloworld/CMakeLists.txt
@@ -1,20 +1,17 @@
 cmake_minimum_required(VERSION 3.14.2)
 
+if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}\\scripts\\buildsystems\\vcpkg.cmake" CACHE STRING "")
+endif()
+
 project(project_helloworld)
 
-set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE FILEPATH "")
+option(BUILD_INSTALL	"Install header and library"	ON)
+option(BUILD_TEST		"Build own tests."				ON)
 
-
-
-option(SNAPPY_BUILD_TESTS "Build Snappy's own tests." ON)
-option(SNAPPY_INSTALL "Install Snappy's header and library" ON)
-
-
-if(SNAPPY_INSTALL)
-endif(SNAPPY_INSTALL)
-
-add_subdirectory(helloworld)
-
+add_subdirectory(helloworld_lib)
 add_subdirectory(helloworld_exe)
-
-add_subdirectory(helloworld_test)
+if (BUILD_TEST)
+	enable_testing()
+	add_subdirectory(helloworld_test)
+endif(BUILD_TEST)
