--- a/cmake/sample_cmake/libhello/hello/CMakeLists.txt
+++ b/cmake/sample_cmake/libhello/hello/CMakeLists.txt
@@ -17,30 +17,39 @@ add_library(lib::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 
 
-set(CMAKE_INSTALL_PREFIX "C:/install")
+#set(CMAKE_INSTALL_PREFIX "C:/install")
 
-set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER ${public})
+#set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER ${public})
 
-target_include_directories(${PROJECT_NAME}
-	PUBLIC
-	    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include>
-		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-	PRIVATE
-		${CMAKE_CURRENT_SOURCE_DIR}
-)
-#-------------------------
+#target_include_directories(${PROJECT_NAME}
+#	PUBLIC
+#	    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include>
+#		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+#	PRIVATE
+#		${CMAKE_CURRENT_SOURCE_DIR}
+#)
+
+# ========================================================
+# BUILD
+# ========================================================
 if (BUILD_INSTALL)
 	set(CMAKE_INSTALL_PREFIX "C:/install")
-
 	set(EXPORT_NAME ${PROJECT_NAME}-config)
+
+	foreach(file ${public})
+		get_filename_component(dir ${file} DIRECTORY)
+		string(REPLACE ${CMAKE_CURRENT_SOURCE_DIR} "" dir ${dir})
+		install(
+			FILES 		${file}
+			DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${dir}
+			COMPONENT	Headers
+		)
+	endforeach()
+
 	install(
 		TARGETS						${PROJECT_NAME}
+		DESTINATION 				${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}
 		EXPORT						${EXPORT_NAME}
-		PUBLIC_HEADER	DESTINATION	${CMAKE_INSTALL_PREFIX}/include
-		INCLUDES		DESTINATION	${CMAKE_INSTALL_PREFIX}/include
-		RUNTIME 		DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
-		LIBRARY 		DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-		ARCHIVE			DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
 	)
 
 	install(
