--- a/cmake/sample_cmake/libworld/CMakeLists.txt
+++ b/cmake/sample_cmake/libworld/CMakeLists.txt
@@ -1,9 +1,16 @@
 cmake_minimum_required(VERSION 3.14.2)
 
-project(libhello)
+if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}\\scripts\\buildsystems\\vcpkg.cmake" CACHE STRING "")
+endif()
 
-set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE FILEPATH "")
-enable_testing()
+project(libworld)
 
-add_subdirectory(src)
-add_subdirectory(test)
+option(BUILD_INSTALL	"Install header and library"	ON)
+option(BUILD_TEST		"Build own tests."				ON)
+
+add_subdirectory(world)
+if (BUILD_TEST)
+	enable_testing()
+	add_subdirectory(world_test)
+endif(BUILD_TEST)
